--- a/church/templates/church/blog.html
+++ b/church/templates/church/blog.html
@@ -20,7 +20,7 @@
                     <div class="bi-thumb set-bg" data-setbg="{{post.photo.file.url}}"></div>
                     <div class="bi-content">
                         <div class="date">{{ post.created_at|date:"j M Y" }}</div>
-                        <h4><a href="single-blog.html">{{ post.title| truncatechars:20 }}</a></h4>
+                        <h4><a href="{{post.get_absolute_url}}">{{ post.title| truncatechars:20 }}</a></h4>
                         <div class="bi-author">by <a href="index.html#">{{ post.author }}</a></div>
                         <a href="#" class="bi-cata">{{ post.category }}</a>
                     </div>
