--- a/church/templates/church/events-list.html
+++ b/church/templates/church/events-list.html
@@ -39,7 +39,7 @@
                                 </div>
                             </div>
                             <p>{{event.content| truncatewords:40}}</p>
-                            <a href="" class="site-btn sb-line">{% translate "Read more" %}</a>
+                            <a href="{{event.get_absolute_url}}" class="site-btn sb-line">{% translate "Read more" %}</a>
                         </div>
                     </div>
                 </div>
